Vivado/Layers/relu/relu_cnn/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg400-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'relu_Alg.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from relu_Alg.cpp:1:
relu_Alg.cpp:5:9: error: redefinition of parameter 'in'
  DTYPE in[NUM_OUTCHAN][OUT_ROWS][OUT_COLS])
        ^
relu_Alg.cpp:4:17: note: previous declaration is here
void relu(DTYPE in[NUM_INCHAN][IN_ROWS][IN_COLS],
                ^
relu_Alg.cpp:14:5: error: use of undeclared identifier 'out'
    out[ofm][r][c] = (data>0) ? data : 0;
    ^
2 errors generated.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg400-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'relu_Alg.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from relu_Alg.cpp:1:
relu_Alg.cpp:5:9: error: redefinition of parameter 'in'
  DTYPE in[NUM_OUTCHAN][OUT_ROWS][OUT_COLS])
        ^
relu_Alg.cpp:4:17: note: previous declaration is here
void relu(DTYPE in[NUM_INCHAN][IN_ROWS][IN_COLS],
                ^
relu_Alg.cpp:14:5: error: use of undeclared identifier 'out'
    out[ofm][r][c] = (data>0) ? data : 0;
    ^
2 errors generated.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg400-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'relu_Alg.cpp' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:01 ; elapsed = 00:00:12 . Memory (MB): peak = 185.371 ; gain = 93.828
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:01 ; elapsed = 00:00:12 . Memory (MB): peak = 185.371 ; gain = 93.828
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:01 ; elapsed = 00:00:12 . Memory (MB): peak = 185.371 ; gain = 93.828
INFO: [HLS 200-10] Checking synthesizability ...
INFO: [HLS 200-111] Finished Checking Synthesizability Time (s): cpu = 00:00:01 ; elapsed = 00:00:12 . Memory (MB): peak = 185.371 ; gain = 93.828
INFO: [HLS 200-111] Finished Pre-synthesis Time (s): cpu = 00:00:01 ; elapsed = 00:00:12 . Memory (MB): peak = 185.371 ; gain = 93.828
INFO: [HLS 200-111] Finished Architecture Synthesis Time (s): cpu = 00:00:01 ; elapsed = 00:00:13 . Memory (MB): peak = 185.371 ; gain = 93.828
INFO: [HLS 200-10] Starting hardware synthesis ...
INFO: [HLS 200-10] Synthesizing 'relu' ...
WARNING: [SYN 201-107] Renaming port name 'relu/in' to 'relu/in_r' to avoid the conflict with HDL keywords or other object names.
WARNING: [SYN 201-107] Renaming port name 'relu/out' to 'relu/out_r' to avoid the conflict with HDL keywords or other object names.
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-42] -- Implementing module 'relu' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [SCHED 204-11] Starting scheduling ...
INFO: [SCHED 204-11] Finished scheduling.
INFO: [HLS 200-111]  Elapsed time: 12.592 seconds; current allocated memory: 110.332 MB.
INFO: [HLS 200-434] Only 0 loops out of a total 3 loops have been pipelined in this design.
INFO: [BIND 205-100] Starting micro-architecture generation ...
INFO: [BIND 205-101] Performing variable lifetime analysis.
INFO: [BIND 205-101] Exploring resource sharing.
INFO: [BIND 205-101] Binding ...
INFO: [BIND 205-100] Finished micro-architecture generation.
INFO: [HLS 200-111]  Elapsed time: 0.065 seconds; current allocated memory: 110.653 MB.
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-10] -- Generating RTL for module 'relu' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [RTGEN 206-500] Setting interface mode on port 'relu/in_r' to 'ap_memory'.
INFO: [RTGEN 206-500] Setting interface mode on port 'relu/out_r' to 'ap_memory'.
INFO: [RTGEN 206-500] Setting interface mode on function 'relu' to 'ap_ctrl_hs'.
INFO: [SYN 201-210] Renamed object name 'relu_fcmp_32ns_32ns_1_2_1' to 'relu_fcmp_32ns_32bkb' due to the length limit 20
INFO: [RTGEN 206-100] Generating core module 'relu_fcmp_32ns_32bkb': 1 instance(s).
INFO: [RTGEN 206-100] Finished creating RTL model for 'relu'.
INFO: [HLS 200-111]  Elapsed time: 0.085 seconds; current allocated memory: 111.033 MB.
INFO: [HLS 200-111] Finished generating all RTL models Time (s): cpu = 00:00:02 ; elapsed = 00:00:14 . Memory (MB): peak = 185.371 ; gain = 93.828
INFO: [VHDL 208-304] Generating VHDL RTL for relu.
INFO: [VLOG 209-307] Generating Verilog RTL for relu.
INFO: [HLS 200-112] Total elapsed time: 13.896 seconds; peak allocated memory: 111.033 MB.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg400-1'
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
INFO: [SIM 211-1] CSim done with 0 errors.
INFO: [SIM 211-3] *************** CSIM finish ***************
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg400-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [Common 17-206] Exiting vivado_hls at Fri Mar  6 00:15:53 2020...
